# GitSwitchHub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  pages-index.html  quickstart.md  script.js  styles.css
.github/workflows/: build.yml  pages.yml  release.yml
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  git_helper.rs  github_auth.rs  keychain.rs  lib.rs  main.rs  ssh.rs
