[package]
name = "gitswitchhub"
version = "0.1.0"
description = "GitSwitchHub - Seamless GitHub account switching for macOS"
authors = ["GitSwitchHub Team"]
edition = "2021"

[lib]
name = "gitswitchhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
octocrab = "0.35"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"

